[tool.poetry]
name = "unet-semantic-segmentation"
version = "0.1.0"
description = ""
authors = ["narinemarutyan <narine_m@purlin.com>"]
readme = "README.md"
packages = [{include = "unet_semantic_segmentation"}]

[tool.poetry.dependencies]
python = "^3.9"
segmentation-models = "^1.0.1"
keras = "^3.4.1"
matplotlib = "^3.9.1"
tensorflow = "^2.17.0"
opencv-python = "^4.10.0.84"
patchify = "^0.2.3"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

